--- a/Forms/Web.config
+++ b/Forms/Web.config
@@ -14,6 +14,7 @@
   </system.webServer>
   <connectionStrings>
     <clear />
-    <add name="Database" connectionString="Server=.;Database=Claimsuite;Integrated Security=SSPI;"/>
+    <!--<add name="Database" connectionString="Server=.;Database=Claimsuite;Integrated Security=SSPI;"/>-->
+    <add name="Database" connectionString="Server=THAMES;Database=SorcererIrk;UID=sa;PWD=thamessa;"/>
   </connectionStrings>
 </configuration>
