--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -11,7 +11,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forms</RootNamespace>
+    <RootNamespace>mg</RootNamespace>
     <AssemblyName>Forms</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
@@ -71,9 +71,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="scripts\angular-resource.min.js" />
     <Content Include="scripts\angular-route.min.js.map" />
     <Content Include="scripts\angular.min.js.map" />
     <Content Include="exec.ashx" />
+    <Content Include="scripts\angular-resource.min.js.map" />
+    <Content Include="hash.ashx" />
+    <Content Include="login.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -87,7 +91,6 @@
     <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\font-awesome.min.css" />
-    <Content Include="scripts\app\app - Copy.js" />
     <Content Include="scripts\app\controls.js" />
     <Content Include="views\entities.html" />
     <Content Include="views\entity.html" />
@@ -106,6 +109,13 @@
   <ItemGroup>
     <Compile Include="exec.ashx.cs">
       <DependentUpon>exec.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="App_Code\PasswordHash.cs" />
+    <Compile Include="hash.ashx.cs">
+      <DependentUpon>hash.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="login.ashx.cs">
+      <DependentUpon>login.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
