--- a/Forms/Web.config
+++ b/Forms/Web.config
@@ -17,4 +17,8 @@
     <add name="Database" connectionString="Server=.;Database=Claimsuite;Integrated Security=SSPI;"/>
     <!--<add name="Database" connectionString="Server=THAMES;Database=SorcererIrk;UID=sa;PWD=thamessa;"/>-->
   </connectionStrings>
+  <appSettings>
+    <clear />
+    <add key="JWTEncryptionKey" value="3dd!3T0rr35Th3M@mb0K!ng"/>
+  </appSettings>
 </configuration>
