--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -104,13 +104,13 @@
     <Content Include="scripts\ngStorage.min.js" />
     <Content Include="scripts\ui-bootstrap-tpls-0.12.1.min.js" />
     <Content Include="views\home.html" />
+    <Content Include="views\login.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="exec.ashx.cs">
       <DependentUpon>exec.ashx</DependentUpon>
     </Compile>
-    <Compile Include="App_Code\PasswordHash.cs" />
     <Compile Include="hash.ashx.cs">
       <DependentUpon>hash.ashx</DependentUpon>
     </Compile>
@@ -119,6 +119,7 @@
       <DependentUpon>login.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="App_Code\Security.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
