--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -92,6 +92,7 @@
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\font-awesome.min.css" />
     <Content Include="scripts\app\controls.js" />
+    <Content Include="scripts\app\dbController.js" />
     <Content Include="views\entities.html" />
     <Content Include="views\entity.html" />
     <Content Include="views\exec.html" />
@@ -105,6 +106,7 @@
     <Content Include="scripts\ui-bootstrap-tpls-0.12.1.min.js" />
     <Content Include="views\home.html" />
     <Content Include="views\login.html" />
+    <Content Include="views\test.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
