--- a/Forms/bin/Forms.dll.config
+++ b/Forms/bin/Forms.dll.config
@@ -23,5 +23,6 @@
     <add key="HASH_BYTE_SIZE" value="24" />
     <add key="PBKDF2_ITERATIONS" value="1000" />
     <add key="JWT_ENCRYPTION_KEY" value="3dd!3T0rr35Th3M@mb0K!ngFr0mN3wY0rk" />
+    <add key="LOGIN_TIMEOUT" value="15" />
   </appSettings>
 </configuration>
