--- a/Forms/Web.config
+++ b/Forms/Web.config
@@ -11,6 +11,12 @@
         <add value="main.html" />
       </files>
     </defaultDocument>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
   </system.webServer>
   <connectionStrings>
     <clear />
@@ -22,7 +28,7 @@
     <add key="SALT_BYTE_SIZE" value="24" />
     <add key="HASH_BYTE_SIZE" value="24" />
     <add key="PBKDF2_ITERATIONS" value="1000" />
-    <add key="JWT_ENCRYPTION_KEY" value="3dd!3T0rr35Th3M@mb0K!ngFr0mN3wY0rk" />
+    <add key="JWT_ENCRYPTION_KEY" value="3dd!370rr3$7h3M@mb0K!ngFr0mN3wY0rk" />
     <add key="LOGIN_TIMEOUT" value="15" />
   </appSettings>
 </configuration>
